--- a/Barrio1/Resources/Styles/Styles.xaml
+++ b/Barrio1/Resources/Styles/Styles.xaml
@@ -423,4 +423,11 @@
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
+    <Style TargetType="ContentPage">
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource FondoC}, Dark={StaticResource FondoO}}" />
+    </Style>
+
+    <Style TargetType="RoundRectangle">
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource FondoC}, Dark={StaticResource FondoO}}" />
+    </Style>
 </ResourceDictionary>
