--- a/Barrio1/Views/InventarioPage.xaml
+++ b/Barrio1/Views/InventarioPage.xaml
@@ -7,47 +7,54 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:Barrio1.ViewModels"
     x:DataType="viewmodel:InventarioViewModel"
-    BackgroundColor="{DynamicResource Fondo}"
     >
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding GetInventarioCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior Command="{Binding GetInventarioCommand}" 
+                                        EventName="Appearing" />
     </ContentPage.Behaviors>
 
-    <Grid RowDefinitions="*,*" ColumnDefinitions="*,*">
-        <StackLayout Grid.Row="0" Grid.Column="0">
-            <Frame BackgroundColor="Gray">
-                <Label Text="Botellas" TextColor="White" />
-            </Frame>
-            <CollectionView ItemsSource="{Binding InventarioBo}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:Botellas">
-                        <Frame BackgroundColor="Gray">
-                            <Grid Grid.Row="1" Grid.Column="0" ColumnDefinitions="*,*">
-                                <Label Grid.Column="0" TextColor="White" Text="{Binding nombreBo}"/>
-                                <Label Grid.Column="1" TextColor="White" Text="{Binding cantidadBo}"/>
-                            </Grid>
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </StackLayout>
-        <StackLayout Grid.Row="0" Grid.Column="1">
-            <Frame BackgroundColor="Gray">
-                <Label Text="Barriles" TextColor="White"/>
-            </Frame>
-            <CollectionView ItemsSource="{Binding InventarioBa}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:Barriles">
-                        <Frame BackgroundColor="Gray">
-                            <Grid Grid.Row="1" Grid.Column="0" ColumnDefinitions="*,*">
-                                <Label Grid.Column="0" TextColor="White" Text="{Binding nombreBa}" />
-                                <Label Grid.Column="1" TextColor="White" Text="{Binding cantidadBa}"/>
-                            </Grid>
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </StackLayout>
+    <Grid Padding="20" 
+          RowDefinitions="auto,*" 
+          ColumnDefinitions="*,*"
+          RowSpacing="20"
+          ColumnSpacing="10">
+        <Label Text="Botellas" Grid.Column="0" Grid.Row="0"/>
+        <CollectionView Grid.Column="0" Grid.Row="1" ItemsSource="{Binding InventarioBo}">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout ItemSpacing="6" Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:Botellas">
+                    <Border
+                        Padding="15"
+                        Stroke="Dimgray"
+                        StrokeThickness="1">
+                        <Grid ColumnDefinitions="*,*">
+                            <Label Grid.Column="0" FontSize="12" HorizontalTextAlignment="Start" Text="{Binding nombreBo}"/>
+                            <Label Grid.Column="1" HorizontalTextAlignment="End" Text="{Binding cantidadBo}"/>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <Label Grid.Column="1" Grid.Row="0" Text="Barriles"/>
+        <CollectionView Grid.Column="1" Grid.Row="1" ItemsSource="{Binding InventarioBa}">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout ItemSpacing="6" Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:Barriles">
+                    <Border
+                        Padding="15"
+                        Stroke="Dimgray"
+                        StrokeThickness="1">
+                        <Grid ColumnDefinitions="*,*">
+                            <Label Grid.Column="0" FontSize="12" HorizontalTextAlignment="Start" Text="{Binding nombreBa}" />
+                            <Label Grid.Column="1" HorizontalTextAlignment="End" Text="{Binding cantidadBa}"/>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </Grid>
-
 </ContentPage>
