--- a/Barrio1/Views/VentasListingPage.xaml
+++ b/Barrio1/Views/VentasListingPage.xaml
@@ -6,7 +6,7 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:Barrio1.ViewModels"
     x:DataType="viewmodel:VentasListingViewModel"
-    BackgroundColor="{DynamicResource Fondo}">
+    >
 
     <ContentPage.Resources>
         <toolkit:BoolToObjectConverter
@@ -16,7 +16,8 @@
     </ContentPage.Resources>
 
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding GetVentasCommand}" EventName="Appearing" />
+        <toolkit:EventToCommandBehavior Command="{Binding GetVentasCommand}" 
+                                        EventName="Appearing" />
     </ContentPage.Behaviors>
 
     <Grid
@@ -55,7 +56,7 @@
                 Grid.Row="1"
                 Grid.Column="2"
                 Command="{Binding AddVentaCommand}"
-                Text="Añadir venta"
+                Text="Nueva venta"
                 />
 
 
